--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sonic-cel-platform-modules (0.6) unstable; urgency=low
+
+  * Remove unused port-mode switch script. This should be done by hwsku config script.
+  * Add script to turn off QSFP low power mode when boot up.
+
+ -- Pradchaya Phucharoen <pphuchar@celestica.com>  Wed, 26 July 2017 10:43:00 +0700
+
 sonic-cel-platform-modules (0.5) unstable; urgency=low
 
   * Add port-mode switch script to support 100G 50G 10G_50G qsfp modes.
