--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sonic-cel-platform-modules (0.7) unstable; urgency=low
+
+  * Add haliburton platform
+
+ -- Supakit Fuangkaew <sfuangk@celestica.com>  Thu, 5 Apr 2018 09:09:09 +0700
+
 sonic-cel-platform-modules (0.6) unstable; urgency=low
 
   * Remove unused port-mode switch script. This should be done by hwsku config script.
