--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sonic-cel-platform-modules (0.8) unstable; urgency=low
+
+  * Add dx010 platform fan led control.
+  * The platform gpio init moved to kernel space. 
+
+ -- Pradchaya Phucharoen <pphuchar@celestica.com>  Mon, 1 Jul 2018 11:09:13 +0700
+
 sonic-cel-platform-modules (0.7) unstable; urgency=low
 
   * Add dx010 plaform gpio sysfs exported when module load.
