--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sonic-cel-platform-modules (0.9) unstable; urgency=low
+
+  * Add Questone2 platform.
+
+ -- Wirut Getbamrung <wgetbumr@celestica.com>  Tue, 31 Jul 2018 10:40:00 +0700
+
 sonic-cel-platform-modules (0.8) unstable; urgency=low
 
   * Add dx010 platform fan led control.
