--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sonic-cel-platform-modules (1.0) unstable; urgency=low
+
+  * Add Silverstone platform.
+
+ -- Pradchaya Phucharoen <pphuchar@celestica.com>  Mon, 06 Aug 2018 12:18:15 +0700
+
 sonic-cel-platform-modules (0.9) unstable; urgency=low
 
   * Add Questone2 platform.
