--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+sonic-cel-platform-modules (1.1) unstable; urgency=low
+
+  * Add Fishbone48 platform.
+  * Add Fishbone32 platform.
+
+ -- Pradchaya Phucharoen <pphuchar@celestica.com>  Mon, 03 Sep 2018 17:10:10 +0700
+
 sonic-cel-platform-modules (1.0) unstable; urgency=low
 
   * Add Silverstone platform.
