--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sonic-cel-platform-modules (1.1) unstable; urgency=low
+
+  * Add Midstone-100TH2 platform.
+
+ -- Jakkapan Jangmuang <jjangmua@celestica.com>  Wed, 05 Sep 2018 11:00:00 +0800
+
 sonic-cel-platform-modules (1.0) unstable; urgency=low
 
   * Add Silverstone platform.
