--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+sonic-cel-platform-modules (1.1) unstable; urgency=low
+
+  * Add Phalanx platform.
+
+ -- Pradchaya Phucharoen <pphuchar@celestica.com>  Fri, 18 Oct 2018 16:40:40 +0700
+
 sonic-cel-platform-modules (1.0) unstable; urgency=low
 
   * Add Silverstone platform.
